Fix presentation preview layout on mobile devices

--- a/src/css/modules/presentation.css
+++ b/src/css/modules/presentation.css
@@ -1,30 +1,17 @@
 .presentation {
-    display: flex;
     padding: calc(var(--base-spacing) * 4);
 }
 
 .presentation__format {
-    width: calc(100% / 12 * 2);
-    margin-right: calc(var(--base-spacing) * 2);
+    float: right;
     text-align: center;
-    color: var(--color-text-02);
     margin-top: calc(var(--base-spacing) * 1);
+    padding-left: calc(var(--base-spacing) * 2);
 }
-.presentation__description {
-    margin-right: calc(var(--base-spacing) * 2);
-    margin-left: calc(var(--base-spacing) * 2);
-    width: calc(100% / 12 * 7);
-}
-.presentation__authors {
-    margin-left: calc(var(--base-spacing) * 2);
-    width: calc(100% / 12 * 3);
-}
-
-.presentation__authors > :first-child {
-    margin-top: 0;
-}
-.presentation__authors > :last-child {
-    margin-bottom: 0;
+.presentation__format svg {
+    height: 2.5em;
+    width: 2.5em;
+    max-width: 100%;
 }
 
 .presentation__description h3 {
@@ -55,4 +42,53 @@
 .presentation__themes > * {
     display: inline;
     margin: 0;
+}
+
+.presentation__authors {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: calc(var(--base-spacing) * -2);
+}
+
+@media screen and (min-width: 44em) {
+    .presentation {
+        display: flex;
+        padding: calc(var(--base-spacing) * 4);
+    }
+    
+    .presentation__format {
+        flex: 1;
+        padding-right: calc(var(--base-spacing) * 2);
+        text-align: center;
+        color: var(--color-ui-06);
+        margin-top: calc(var(--base-spacing) * 1);
+    }
+    .presentation__format svg {
+        height: 4em;
+        width: 4em;
+    }
+
+    .presentation__description {
+        padding-right: calc(var(--base-spacing) * 2);
+        padding-left: calc(var(--base-spacing) * 2);
+        flex: 8;
+    }
+
+    .presentation__authors {
+        padding-left: calc(var(--base-spacing) * 2);
+        margin-bottom: 0;
+        flex: 3;
+        flex-direction: column;
+    }
+    .presentation__authors > * {
+        margin: calc(var(--base-spacing)) 0;
+    }
+    .presentation__authors > :first-child {
+        margin-top: 0;
+    }
+    .presentation__authors > :last-child {
+        margin-bottom: 0;
+    }
 }
